After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750482 - Fix -Werror build for clang
Fix -Werror build for clang
Status: RESOLVED FIXED
Product: hitori
Classification: Applications
Component: General
git master
Other FreeBSD
: Normal normal
: ---
Assigned To: hitori-maint
hitori-maint
Depends on:
Blocks:
 
 
Reported: 2015-06-06 12:49 UTC by Ting-Wei Lan
Modified: 2015-06-09 07:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] build: Fix -Werror build for clang (1.40 KB, patch)
2015-06-06 12:50 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2015-06-06 12:49:34 UTC
Clang doesn't allow return a void expression in a void function. The attched patch can fix this issue.
Comment 1 Ting-Wei Lan 2015-06-06 12:50:45 UTC
Created attachment 304688 [details] [review]
[PATCH] build: Fix -Werror build for clang
Comment 2 Philip Withnall 2015-06-09 07:31:55 UTC
Review of attachment 304688 [details] [review]:

Good, thanks.
Comment 3 Ting-Wei Lan 2015-06-09 07:40:36 UTC
Attachment 304688 [details] pushed as 263efcc - build: Fix -Werror build for clang