build: Fix -Werror build for clang

This prevents 'void function should not return void expression' warning.

https://bugzilla.gnome.org/show_bug.cgi?id=750482